--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h1> I am Mark Tony N</h1>
     </header>
-<img src="D:/tony.jpg" alt="Tony Profile Picture" width="200" height="200">
+<img src="tony.jpg" alt="Tony Profile Picture" width="200" height="200">
     <section>
         <h2>Introduction</h2>
         <p>Hi, I'm  Mark Tony N, a student at St. John's College of Arts and Science in Ammandivilai. I'd like to share some information about myself.</p>
